corregido el mail del formulario

--- a/src/config/config.json
+++ b/src/config/config.json
@@ -15,7 +15,7 @@
     "pagination": 6
   },
   "params": {
-    "contact_form_action": "https://formspree.io/f/mjkapowq",
+    "contact_form_action": "https://formspree.io/f/mqaywqyv",
     "address": "Quesada 2480, C1429COL Belgrano, Ciudad Autónoma de Buenos Aires",
     "footer_title": "¿Listo para Reservar tu Consultorio?",
     "footer_content": "Espacios profesionales habilitados por el Ministerio de Salud CABA en el corazón de Belgrano."
